--- a/packages/bun-release/package.json
+++ b/packages/bun-release/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "format": "prettier --write src scripts",
+    "get-version": "bun scripts/get-version.ts",
     "upload-npm": "bun scripts/upload-npm.ts",
     "upload-assets": "bun scripts/upload-assets.ts"
   }
