Run tests on push

--- a/.github/workflows/bun-test.yml
+++ b/.github/workflows/bun-test.yml
@@ -1,5 +1,12 @@
 name: bun-test
 on:
+  push:
+    branches:
+      - main
+      - "test/*"
+    paths:
+      - "src/**/*"
+      - "test/**/*"
   workflow_dispatch:
     inputs:
       release:
