Add types for node:console and node:perf_hooks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "src/bun.js/builtins",
     "src/api/demo",
     "test/snapshots",
-    "test/snapshots-no-hmr"
+    "test/snapshots-no-hmr",
+    "node_modules"
   ]
 }
