--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build-fallback": "esbuild --target=esnext  --bundle src/fallback.ts --format=iife --platform=browser --minify > src/fallback.out.js",
     "postinstall": "bash .scripts/postinstall.sh",
     "typecheck": "tsc",
-    "fmt": "prettier --write './**/*.{ts,tsx,js,jsx}'",
+    "fmt": "prettier --write './**/*.{ts,tsx,js,jsx}' --config .prettierrc",
     "lint": "eslint './**/*.d.ts' --cache",
     "lint:fix": "eslint './**/*.d.ts' --cache --fix"
   },
