--- a/.github/workflows/bun-release.yml
+++ b/.github/workflows/bun-release.yml
@@ -170,7 +170,7 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_options: --gpg-sign=${{ steps.setup-gpg.outputs.keyid }}
-          commit_message: Bun v${{ env.TAG }}
+          commit_message: Release ${{ env.TAG }}
           commit_user_name: robobun
           commit_user_email: robobun@oven.sh
           commit_author: robobun <robobun@oven.sh>
