--- a/packages/bun-lambda/package.json
+++ b/packages/bun-lambda/package.json
@@ -1,16 +1,15 @@
 {
   "devDependencies": {
     "bun-types": "^0.4.0",
-    "@octokit/types": "^8.0.0",
-    "jszip": "^3.10.1",
-    "serverless": "^3.26.0",
     "prettier": "^2.8.2"
+  },
+  "dependencies": {
+    "jszip": "^3.10.1",
+    "oclif": "^3.6.5"
   },
   "scripts": {
     "build": "bun scripts/build.ts",
+    "publish": "bun scripts/publish.ts",
     "format": "prettier --write ."
-  },
-  "dependencies": {
-    "aws4fetch": "^1.0.17"
   }
 }
