--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "JarredSumner.zig-unofficial",
     "esbenp.prettier-vscode",
     "xaver.clang-format",
-    "vadimcn.vscode-lldb"
+    "vadimcn.vscode-lldb",
+    "yzhang.markdown-all-in-one"
   ]
 }
