--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,13 @@
   "arrowParens": "avoid",
   "printWidth": 120,
   "trailingComma": "all",
-  "useTabs": false
+  "useTabs": false,
+  "overrides": [
+    {
+      "files": "README.md",
+      "options": {
+        "printWidth": 80
+      }
+    }
+  ]
 }
