--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,3 @@
 {
-  "recommendations": [
-    "AugusteRame.zls-vscode",
-    "JarredSumner.zig-unofficial",
-    "esbenp.prettier-vscode",
-    "xaver.clang-format",
-    "vadimcn.vscode-lldb",
-    "yzhang.markdown-all-in-one"
-  ]
+  "recommendations": ["ziglang.vscode-zig", "esbenp.prettier-vscode", "xaver.clang-format", "vadimcn.vscode-lldb"]
 }
