Use newer version of setup-bun

--- a/.github/workflows/bun-release-canary.yml
+++ b/.github/workflows/bun-release-canary.yml
@@ -17,10 +17,9 @@ jobs:
         uses: actions/checkout@v3
       - id: setup-bun
         name: Setup Bun
-        uses: oven-sh/setup-bun@v0.1.8
+        uses: oven-sh/setup-bun@v1
         with:
           bun-version: canary
-          github-token: ${{ secrets.GITHUB_TOKEN }}
       - id: bun-install
         name: Install Dependencies
         run: bun install
@@ -47,15 +46,12 @@ jobs:
           node-version: latest
       - id: setup-bun
         name: Setup Bun
-        uses: oven-sh/setup-bun@v0.1.8
+        uses: oven-sh/setup-bun@v1
         with:
           bun-version: canary
-          github-token: ${{ secrets.GITHUB_TOKEN }}
       - id: bun-install
         name: Install Dependencies
-        run: |
-          bun upgrade --canary
-          bun install
+        run: bun install
       - id: setup-env
         name: Setup Environment
         run: |
