--- a/.gitmodules
+++ b/.gitmodules
@@ -65,3 +65,6 @@ fetchRecurseSubmodules = false
 [submodule "src/deps/c-ares"]
 	path = src/deps/c-ares
 	url = https://github.com/c-ares/c-ares.git
+[submodule "src/deps/zig-clap"]
+	path = src/deps/zig-clap
+	url = https://github.com/Hejsil/zig-clap.git
