--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,11 @@
     "examples/macros",
     "test/bun.js/solid-dom-fixtures",
     "test/bun.js/bundled",
+    "src/deps",
+    "bun-webkit",
     // JavaScriptCore builtins use a non-standard "@" symbol to indicate a private identifier which no other tool supports
     "src/bun.js/builtins",
+    "src/bun.js/WebKit",
     "src/api/demo",
     "test/snapshots",
     "test/snapshots-no-hmr",
