--- a/packages/bun-types/package.json
+++ b/packages/bun-types/package.json
@@ -10,8 +10,9 @@
     "fmt": "prettier --write './**/*.{ts,tsx,js,jsx}'"
   },
   "devDependencies": {
-    "tsd": "^0.22.0",
-    "prettier": "^2.4.1"
+    "conditional-type-checks": "^1.0.6",
+    "prettier": "^2.4.1",
+    "tsd": "^0.22.0"
   },
   "tsd": {
     "directory": "tests"
