--- a/bench/snippets/package.json
+++ b/bench/snippets/package.json
@@ -2,5 +2,6 @@
   "dependencies": {
     "eventemitter3": "^5.0.0",
     "tiny-typed-emitter": "latest"
-  }
+  },
+  "prettier": "../../.prettierrc.cjs"
 }
