--- a/.github/workflows/bun-release-canary.yml
+++ b/.github/workflows/bun-release-canary.yml
@@ -29,49 +29,49 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  npm-types:
-    name: Release types to NPM
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: packages/bun-types
-    steps:
-      - id: checkout
-        name: Checkout
-        uses: actions/checkout@v3
-      - id: setup-node
-        name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: latest
-      - id: setup-bun
-        name: Setup Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: canary
-      - id: bun-install
-        name: Install Dependencies
-        run: bun install
-      - id: setup-env
-        name: Setup Environment
-        run: |
-          SHA=$(git rev-parse --short "$GITHUB_SHA")
-          VERSION=$(bun --version)
-          TAG="${VERSION}-canary.$(date '+%Y%m%d').1+${SHA}"
-          echo "Setup tag: ${TAG}"
-          echo "TAG=${TAG}" >> ${GITHUB_ENV}
-      - id: bun-run
-        name: Build
-        run: bun run build
-        env:
-          BUN_VERSION: ${{ env.TAG }}
-      - id: npm-publish
-        name: Release
-        uses: JS-DevTools/npm-publish@v1
-        with:
-          package: packages/bun-types/dist/package.json
-          token: ${{ secrets.NPM_TOKEN }}
-          tag: canary
+  # npm-types:
+  #   name: Release types to NPM
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       working-directory: packages/bun-types
+  #   steps:
+  #     - id: checkout
+  #       name: Checkout
+  #       uses: actions/checkout@v3
+  #     - id: setup-node
+  #       name: Setup Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: latest
+  #     - id: setup-bun
+  #       name: Setup Bun
+  #       uses: oven-sh/setup-bun@v1
+  #       with:
+  #         bun-version: canary
+  #     - id: bun-install
+  #       name: Install Dependencies
+  #       run: bun install
+  #     - id: setup-env
+  #       name: Setup Environment
+  #       run: |
+  #         SHA=$(git rev-parse --short "$GITHUB_SHA")
+  #         VERSION=$(bun --version)
+  #         TAG="${VERSION}-canary.$(date '+%Y%m%d').1+${SHA}"
+  #         echo "Setup tag: ${TAG}"
+  #         echo "TAG=${TAG}" >> ${GITHUB_ENV}
+  #     - id: bun-run
+  #       name: Build
+  #       run: bun run build
+  #       env:
+  #         BUN_VERSION: ${{ env.TAG }}
+  #     - id: npm-publish
+  #       name: Release
+  #       uses: JS-DevTools/npm-publish@v1
+  #       with:
+  #         package: packages/bun-types/dist/package.json
+  #         token: ${{ secrets.NPM_TOKEN }}
+  #         tag: canary
   docker:
     name: Release to Dockerhub
     runs-on: ubuntu-latest
