--- a/.prettierignore
+++ b/.prettierignore
@@ -6,3 +6,7 @@ test/bun.js/bundled
 # src/api/demo
 test/snapshots
 test/snapshots-no-hmr
+src/bun.js/WebKit
+src/bun.js/builtins/js
+src/*.out.js
+src/*out.*.js
