--- a/.github/workflows/zig-fmt.yml
+++ b/.github/workflows/zig-fmt.yml
@@ -26,7 +26,8 @@ jobs:
           submodules: recursive
       - name: Install zig
         run: |
-          curl https://ziglang.org/builds/${{env.ZIG_VERSION}}/zig-linux-x86_64-${{env.ZIG_VERSION}}.tar.xz | tar -xJ
+          curl https://ziglang.org/builds/${{env.ZIG_VERSION}}/zig-linux-x86_64-${{env.ZIG_VERSION}}.tar.gz -L -o zig.tar.gz
+          tar -xf zig.tar.gz
           sudo mv zig-linux-x86_64-${{env.ZIG_VERSION}}/zig /usr/local/bin
       - name: Run zig fmt
         id: fmt
