--- a/.github/workflows/prettier-fmt.yml
+++ b/.github/workflows/prettier-fmt.yml
@@ -1,15 +1,10 @@
-name: Prettier
+name: prettier
 
 on:
   pull_request:
     branches:
       - main
       - jarred/test-actions
-    paths:
-      - "test/**/*.{js,ts,tsx,mjs,cjs,cts,mts}"
-      - "bench/**/*.{js,ts,tsx,mjs,cjs,cts,mts}"
-      - "src/**/*.{js,ts,tsx,mjs,cjs,cts,mts}"
-      - "packages/**/*.{js,ts,tsx,mjs,cjs,cts,mts}"
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
