--- a/.github/workflows/prettier-fmt.yml
+++ b/.github/workflows/prettier-fmt.yml
@@ -31,7 +31,7 @@ jobs:
         id: fmt
         run: |
           bun prettier --check ./bench/**/*.{ts,tsx,js,jsx,mjs,mtsx,mts}  ./packages/**/*.{ts,tsx,js,jsx,mjs,mtsx,mts} ./test/**/*.{ts,tsx,js,jsx,mjs,mtsx,mts} ./src/**/*.{ts,tsx,js,jsx} --config .prettierrc.cjs 2> prettier-fmt.err > prettier-fmt.err || echo "Failed"
-          cat prettier-fmt.err >> $GITHUB_OUTPUT
+          echo "::set-output name=prettier_fmt_errs::$(cat prettier-fmt.err | sed 's/$/\\n/')"
 
       - name: Comment on PR
         if: steps.fmt.outputs.prettier_fmt_errs != ''
