--- a/.github/workflows/zig-fmt.yml
+++ b/.github/workflows/zig-fmt.yml
@@ -33,7 +33,8 @@ jobs:
         id: fmt
         run: |
           zig fmt --check src/*.zig src/**/*.zig >> zig-fmt.err 2>> zig-fmt.err || echo "Failed"
-          cat zig-fmt.err >> $GITHUB_OUTPUT
+          # Pipe to $GITHUB_OUTPUT and replace newlines with \\n
+          echo "::set-output name=zig_fmt_errs::$(cat zig-fmt.err | sed 's/$/\\n/')"
 
       - name: Comment on PR
         if: steps.fmt.outputs.zig_fmt_errs != ''
