--- a/.github/workflows/zig-fmt.yml
+++ b/.github/workflows/zig-fmt.yml
@@ -35,8 +35,17 @@ jobs:
           zig fmt --check src/*.zig src/**/*.zig 2> zig-fmt.err > zig-fmt.err2 || echo "Failed"
           delimiter="$(openssl rand -hex 8)"
           echo "zig_fmt_errs<<${delimiter}" >> "${GITHUB_OUTPUT}"
-          cat zig-fmt.err >> "${GITHUB_OUTPUT}"
-          cat zig-fmt.err2 >> "${GITHUB_OUTPUT}"
+
+          if [ -s zig-fmt.err ]; then
+            echo "// The following errors occurred:" >> "${GITHUB_OUTPUT}"
+            cat zig-fmt.err >> "${GITHUB_OUTPUT}"
+          fi
+
+          if [ -s zig-fmt.err2 ]; then
+            echo "// The following files were not formatted:" >> "${GITHUB_OUTPUT}"
+            cat zig-fmt.err2 >> "${GITHUB_OUTPUT}"
+          fi
+
           echo "${delimiter}" >> "${GITHUB_OUTPUT}"
       - name: Comment on PR
         if: steps.fmt.outputs.zig_fmt_errs != ''
