--- a/.github/workflows/zig-fmt.yml
+++ b/.github/workflows/zig-fmt.yml
@@ -53,7 +53,7 @@ jobs:
         with:
           comment_tag: zig-fmt
           message: |
-            @${{ github.actor }} `zig fmt` reported errors. Consider configuring your text editor to [auto-format on save](https://github.com/ziglang/vscode-zig)
+            ❌ @${{ github.actor }} `zig fmt` reported errors. Consider configuring your text editor to [auto-format on save](https://github.com/ziglang/vscode-zig)
 
             ```zig
             // # zig fmt --check src/*.zig src/**/*.zig
@@ -76,7 +76,7 @@ jobs:
           mode: upsert
           create_if_not_exists: false
           message: |
-            `zig fmt` errors have been resolved. Thank you.
+            ✅ `zig fmt` errors have been resolved. Thank you.
 
       - name: Fail the job
         if: steps.fmt.outputs.zig_fmt_errs != ''
