--- a/.github/workflows/prettier-fmt.yml
+++ b/.github/workflows/prettier-fmt.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Run prettier
         id: fmt
         run: |
-          bun prettier --check ./bench/**/*.{ts,tsx,js,jsx,mjs} ./test/**/*.{ts,tsx,js,jsx,mjs} ./src/**/*.{ts,tsx,js,jsx} --config .prettierrc.cjs 2> prettier-fmt.err > prettier-fmt1.err || echo "Failed"
+          bun prettier --check "./bench/**/*.{ts,tsx,js,jsx,mjs}" "./test/**/*.{ts,tsx,js,jsx,mjs}" "./src/**/*.{ts,tsx,js,jsx}" --config .prettierrc.cjs 2> prettier-fmt.err > prettier-fmt1.err || echo "Failed"
           delimiter="$(openssl rand -hex 8)"
           echo "prettier_fmt_errs<<${delimiter}" >> "${GITHUB_OUTPUT}"
           cat prettier-fmt.err >> "${GITHUB_OUTPUT}"
