--- a/.github/workflows/prettier-fmt.yml
+++ b/.github/workflows/prettier-fmt.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           comment_tag: prettier-fmt
           message: |
-            ❌ @${{ github.actor }} `prettier` reported errors. Please configure your text editor to format on save.
+            ❌ @${{ github.actor }} `prettier` reported errors
 
             ```js
             ${{ steps.fmt.outputs.prettier_fmt_errs }}
@@ -56,6 +56,8 @@ jobs:
             ```sh
             bun fmt
             ```
+
+            You might need to run `bun install` locally and configure your text editor to [auto-format on save](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode).
 
             <sup>${{github.ref}}</sup>
       - name: Uncomment on PR
