--- a/.github/workflows/prettier-fmt.yml
+++ b/.github/workflows/prettier-fmt.yml
@@ -59,7 +59,7 @@ jobs:
 
             You might need to run `bun install` locally and configure your text editor to [auto-format on save](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode).
 
-            <sup>${{github.ref}}</sup>
+            <sup>[#${{github.sha}}](https://github.com/oven-sh/bun/commits/${{github.sha}})</sup>
       - name: Uncomment on PR
         if: steps.fmt.outputs.prettier_fmt_errs == ''
         uses: thollander/actions-comment-pull-request@v2
@@ -70,7 +70,7 @@ jobs:
           message: |
             ✅ `prettier` errors have been resolved. Thank you.
 
-            <sup>${{github.ref}}</sup>
+            <sup>[#${{github.sha}}](https://github.com/oven-sh/bun/commits/${{github.sha}})</sup>
       - name: Fail the job
         if: steps.fmt.outputs.prettier_fmt_errs != ''
         run: exit 1
