--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -114,8 +114,8 @@
       "request": "launch",
       "name": "bun build debug",
       "program": "bun-debug",
-      "args": ["build", "--platform=bun", "--outdir=/tmp/testout", "${file}"],
-      "cwd": "${file}/../../",
+      "args": ["bun", "./test/fixtures/bundle/trivial/index.js"],
+      "cwd": "${workspaceFolder}",
       "console": "internalConsole",
       "env": {
         "BUN_CONFIG_MINIFY_WHITESPACE": "1"
