--- a/.github/workflows/run-test-manually.yml
+++ b/.github/workflows/run-test-manually.yml
@@ -30,6 +30,8 @@ jobs:
       - id: test
         name: Test
         run: |
-          bun install && bun install --cwd test/bun.js && bun install --cwd test && bun install --cwd test/bun.js/body-parser-test
+          bun install
+          bun install --cwd test/bun.js
+          bun install --cwd test/bun.js/body-parser-test
           cd packages/bun-internal-test
           bun run test
