--- a/.github/workflows/run-test-manually.yml
+++ b/.github/workflows/run-test-manually.yml
@@ -34,4 +34,5 @@ jobs:
           bun install --cwd test/bun.js
           bun install --cwd test/bun.js/third-party/body-parser-test
           cd packages/bun-internal-test
+          bun install
           bun run test
